# edit-mimeapps-list

./: edit-mimeapps-list.sublime-project  meson.build
include/: widget-qt.h
src/: main.cpp  meson.build  widget-qt.cpp
